@@ -7,20 +7,20 @@ public class PixelDrawerTest {
     @Test
     public void testConstructor() {
         PixelDrawer test = new PixelDrawer();
-        assertEquals(500,test.getPixelList().get(0).size());
+        assertEquals(500,test.getPixelList().getFirst().size());
     }
 
     @Test
     public void getPixelList() {
         PixelDrawer test = new PixelDrawer();
-        assertEquals(0,test.getPixelList().get(0).get(0).getState());
+        assertEquals(0,test.getPixelList().getFirst().getFirst().getState());
     }
 
     @Test
     public void resetImage() {
         PixelDrawer test = new PixelDrawer();
-        test.getPixelList().get(0).get(0).setState(1);
+        test.getPixelList().getFirst().getFirst().setState(1);
         test.resetImage();
-        assertEquals(0,test.getPixelList().get(0).get(0).getState());
+        assertEquals(0,test.getPixelList().getFirst().getFirst().getState());
     }
 }
